--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Tp3-Arrays</title>
 </head>
 <body>
-    <script src="./js/ejercicio1.js"></script>
+    <!-- <script src="./js/ejercicio1.js"></script> -->
+    <script src="./js/ejercicio2.js"></script>
 </body>
 </html>
