--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="se realizaran los ejercicios del tp de arreglos de la academia rolling code school">
-    <meta name="author" content="Hamada Santino">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="se realizaran los ejercicios del tp de arreglos de la academia rolling code school"
+    />
+    <meta name="author" content="Hamada Santino" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Tp3-Arrays</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- <script src="./js/ejercicio1.js"></script> -->
-    <script src="./js/ejercicio2.js"></script>
-</body>
+    <!-- <script src="./js/ejercicio2.js"></script> -->
+    <script src="./js/ejercicio3.js"></script>
+  </body>
 </html>
